--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,11 @@ name = "metadata-builder-sol"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+proc-macro = true
+
 [dependencies]
+proc-macro2 = "1.0.78"
+quote = "1.0.35"
 serde_json = "1.0.114"
+syn = {version = "2.0.52",features = ['full']}
